The material in the Complex mode in the Solidify modifier is wrong #80269

Closed
opened 2020-08-31 06:48:48 +02:00 by Kinouti Takahiro · 13 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: 67EF:CF ATI Technologies Inc. 4.5.13559 Core Profile Context 26.20.12028.2

Blender Version
Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: c2b144df39
Worked: (newest version of Blender that worked as expected)

Short description of error
It looks like the material applied to the wrong polygons.

Exact steps for others to reproduce the error
See the blend file below.
solildify_bug.blend
solidify_bug.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: 67EF:CF ATI Technologies Inc. 4.5.13559 Core Profile Context 26.20.12028.2 **Blender Version** Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: `c2b144df39` Worked: (newest version of Blender that worked as expected) **Short description of error** It looks like the material applied to the wrong polygons. **Exact steps for others to reproduce the error** See the blend file below. [solildify_bug.blend](https://archive.blender.org/developer/F8824560/solildify_bug.blend) ![solidify_bug.png](https://archive.blender.org/developer/F8824556/solidify_bug.png)

Added subscriber: @dskjal-1

Added subscriber: @dskjal-1
Kinouti Takahiro changed title from Material Index Offset in the Complex mode in the Solidify modifier is wrong to The material in the Complex mode in the Solidify modifier is wrong 2020-08-31 08:04:47 +02:00
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Contributor

What would be the expected behaviour?

What would be the expected behaviour?

The results of the material in Simple mode and Complex mode should match.

The results of the material in Simple mode and Complex mode should match.
Contributor

Seems to be related to the thickness.
2020-08-31 12_16_04-Window.png

If you set it to zero it seems to work
2020-08-31 12_16_16-Window.png

Seems to be related to the thickness. ![2020-08-31 12_16_04-Window.png](https://archive.blender.org/developer/F8825191/2020-08-31_12_16_04-Window.png) If you set it to zero it seems to work ![2020-08-31 12_16_16-Window.png](https://archive.blender.org/developer/F8825192/2020-08-31_12_16_16-Window.png)

I expect the following result when switching to Complex mode.
slidify_bug_expected.jpg

I expect the following result when switching to Complex mode. ![slidify_bug_expected.jpg](https://archive.blender.org/developer/F8825248/slidify_bug_expected.jpg)

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

It seems that the Normals -> Flip option of "Simple" also flip the materials. But in "Complex" the option of Normals -> Flip does not change materials.
For me, the wrong is the "Simple" and not the "Complex".
But there is really a bug there.

It seems that the `Normals -> Flip` option of "Simple" also flip the materials. But in "Complex" the option of `Normals -> Flip` does not change materials. For me, the wrong is the "Simple" and not the "Complex". But there is really a bug there.
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Henrik D. self-assigned this 2020-09-14 23:19:21 +02:00
Member

I will fix this in the upcoming days hopefully. I would rather change complex solidify to fit simple solidify even when the behaviour of simple solidify was strange. Otherwise older files using that feature would need versioning to be converted to the new version. (which would not be that big of a deal, if someone has a strong opinion on this let me know).

Also @mano-wii, you can add me on complex solidify bug reports.

I will fix this in the upcoming days hopefully. I would rather change complex solidify to fit simple solidify even when the behaviour of simple solidify was strange. Otherwise older files using that feature would need versioning to be converted to the new version. (which would not be that big of a deal, if someone has a strong opinion on this let me know). Also @mano-wii, you can add me on complex solidify bug reports.

This issue was referenced by 1454865ebb

This issue was referenced by 1454865ebb996bdcd9007abb440772335a285a36

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80269
No description provided.